point and how-to

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
         <div class="challenges-content">
           <div>
             <img src="img/challenge01.png" alt="">
-            <p class="point">海外展開・ダイバーシティ</p>
+            <div><p class="point">海外展開・ダイバーシティ</p></div>
             <p class="point-about">社内にグローバル人材が少ない。</p>
             <p class="point-about">中途人材は獲得が難しい。</p>
           </div>
           <div>
             <img src="img/challenge02.png" alt="">
-            <p class="point">母集団形成・費用対効果</p>
+            <div><p class="point">母集団形成・費用対効果</p></div>
             <p class="point-about">伝統的な採用方法ではリーチできない。</p>
             <p class="point-about">採用コストが高く、費用対効果は低い。</p>
           </div>
@@ -143,17 +143,17 @@
         <h2 class="center"><span>How to use</span>主な機能と使い方</h2>
         <div class="how-to-wrapper">
           <div class="how-to how-to01">
-            <p class="point">採用広報</p>
+            <div><p class="point">採用広報</p></div>
             <p class="point-about">コンテンツで自社の魅力を伝える</p>
             <img src="img/how-to01.png" alt="自社の魅力が伝わるJPort Matchの機能">
           </div>
           <div class="how-to how-to02">
-            <p class="point">母集団形成</p>
+            <div><p class="point">母集団形成</p></div>
             <p class="point-about">ペルソナに合うターゲット設定</p>
             <img src="img/how-to02.png" alt="ペルソナに合うターゲット設定の機能">
           </div>
           <div class="how-to how-to03">
-            <p class="point">エンゲージメント</p>
+            <div><p class="point">エンゲージメント</p></div>
             <p class="point-about">学生とオンラインでつながる</p>
             <img src="img/how-to03.png" alt="学生とオンラインでつながる機能">
           </div>
