--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@
 
   <header>
     <div class="sticky-header">
-      <nav>
-        <ul class="header-nav">
-          <li><a href="#"><img src="img/logo.svg" alt="JPort Match logo"></a></li>
-          <li><a href="#challenges">課題</a></li>
-          <li><a href="#about">サービスの特徴</a></li>
-          <li><a href="#how">使い方</a></li>
-          <li><a href="#case">導入事例</a></li>
-          <li><a href="#voice">業界の支援</a></li>
-          <li><a href="#magazine">JPortHR Magazine</a></li>
-        </ul>
-      </nav>
-      <div>
-        <button class="apply-btn small"><a href="https://share.hsforms.com/1lgwY252vRVuxCtnysIw_lQ4lbvp" target="_blank">無料で利用相談</a></button>
+      <div class="ie">
+        <nav>
+          <ul class="header-nav">
+            <li><a href="#"><img src="img/logo.svg" alt="JPort Match logo"></a></li>
+            <li><a href="#challenges">課題</a></li>
+            <li><a href="#about">サービスの特徴</a></li>
+            <li><a href="#how">使い方</a></li>
+            <li><a href="#case">導入事例</a></li>
+            <li><a href="#voice">業界の支援</a></li>
+            <li><a href="#magazine">JPortHR Magazine</a></li>
+          </ul>
+        </nav>
+        <div>
+          <button class="apply-btn small"><a href="https://share.hsforms.com/1lgwY252vRVuxCtnysIw_lQ4lbvp" target="_blank">無料で利用相談</a></button>
+        </div>
       </div>
     </div>
     <div class="top-bg">
@@ -53,13 +55,13 @@
         <div class="challenges-content">
           <div>
             <img src="img/challenge01.png" alt="">
-            <div><p class="point">海外展開・ダイバーシティ</p></div>
+            <p class="point">海外展開・ダイバーシティ</p>
             <p class="point-about">社内にグローバル人材が少ない。</p>
             <p class="point-about">中途人材は獲得が難しい。</p>
           </div>
           <div>
             <img src="img/challenge02.png" alt="">
-            <div><p class="point">母集団形成・費用対効果</p></div>
+            <p class="point">母集団形成・費用対効果</p>
             <p class="point-about">伝統的な採用方法ではリーチできない。</p>
             <p class="point-about">採用コストが高く、費用対効果は低い。</p>
           </div>
@@ -143,17 +145,17 @@
         <h2 class="center"><span>How to use</span>主な機能と使い方</h2>
         <div class="how-to-wrapper">
           <div class="how-to how-to01">
-            <div><p class="point">採用広報</p></div>
+            <p class="point">採用広報</p>
             <p class="point-about">コンテンツで自社の魅力を伝える</p>
             <img src="img/how-to01.png" alt="自社の魅力が伝わるJPort Matchの機能">
           </div>
           <div class="how-to how-to02">
-            <div><p class="point">母集団形成</p></div>
+            <p class="point">母集団形成</p>
             <p class="point-about">ペルソナに合うターゲット設定</p>
             <img src="img/how-to02.png" alt="ペルソナに合うターゲット設定の機能">
           </div>
           <div class="how-to how-to03">
-            <div><p class="point">エンゲージメント</p></div>
+            <p class="point">エンゲージメント</p>
             <p class="point-about">学生とオンラインでつながる</p>
             <img src="img/how-to03.png" alt="学生とオンラインでつながる機能">
           </div>
