--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <title>JPort Match | グローバル新卒と出会えるマッチングサービス</title>
+  <meta name="description" content="グローバル新卒と出会い、「らしい」海外展開・ダイバーシティを。新卒・中途市場にでてきづらい、全国有名大学のグローバル人材と直接つながる、双方向マッチングサービスです。">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Poppins:wght@500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css" type="text/css">
   <link rel="stylesheet" href="css/style.css" type="text/css">
@@ -18,7 +19,7 @@
       <div class="ie">
         <nav>
           <ul class="header-nav">
-            <li><a href="#"><img src="img/logo.svg" alt="JPort Match logo"></a></li>
+            <li><a href="#"><img src="img/logo.svg" alt="JPort Match ロゴ"></a></li>
             <li><a href="#challenges">課題</a></li>
             <li><a href="#about">サービスの特徴</a></li>
             <li><a href="#how">使い方</a></li>
@@ -28,7 +29,7 @@
           </ul>
         </nav>
         <div>
-          <button class="apply-btn small"><a href="https://share.hsforms.com/1lgwY252vRVuxCtnysIw_lQ4lbvp" target="_blank">無料で利用相談</a></button>
+          <a class="apply-btn small" href="" target="_blank">無料で利用相談</a>
         </div>
       </div>
     </div>
@@ -38,8 +39,8 @@
           <h1>グローバル新卒と出会い、<br><span>「らしい」海外展開・ダイバーシティを。</span></h1>
           <p class="top-text">新卒・中途市場にでてきづらい、全国有名大学のグローバル人材と<br>直接つながる、<span>双方向マッチングサービス</span>です。</p>
           <div class="header-buttons">
-            <button class="apply-btn header-btn"><a href="https://share.hsforms.com/1lgwY252vRVuxCtnysIw_lQ4lbvp" target="_blank">まずは利用相談</a></button>
-            <button class="download-btn header-download-btn"><a>資料ダウンロード</a></button>
+            <a class="apply-btn header-btn" href="" target="_blank">まずは利用相談</a>
+            <a class="download-btn header-download-btn" href="" target="_blank">資料ダウンロード</a>
           </div>
           <img class="mac" src="img/mac-top.png" alt="サービスの画面">
           <img class="stats" src="img/global.svg" alt="累計登録者数2000名突破、主要SNSでのエンゲージメント率60倍以上、学生満足度88.3%">
@@ -54,13 +55,13 @@
         <h2 class="center"><span>Challenges</span>グローバル人材採用の課題</h2>
         <div class="challenges-content">
           <div>
-            <img src="img/challenge01.png" alt="">
+            <img src="img/challenge01.png" alt="様々な国籍の社員がオフィスで働いている">
             <p class="point">海外展開・ダイバーシティ</p>
             <p class="point-about">社内にグローバル人材が少ない。</p>
             <p class="point-about">中途人材は獲得が難しい。</p>
           </div>
           <div>
-            <img src="img/challenge02.png" alt="">
+            <img src="img/challenge02.png" alt="伝統的なジョブフェア">
             <p class="point">母集団形成・費用対効果</p>
             <p class="point-about">伝統的な採用方法ではリーチできない。</p>
             <p class="point-about">採用コストが高く、費用対効果は低い。</p>
@@ -84,27 +85,27 @@
         <h2 class="center"><span>Last-one-mile / Community</span>JPortにしかない母集団<span class="span-community">「直接・コミュニティ」だから他と違う</span></h2>
         <div class="jport-community">
           <div class="jport-journal">
-            <img src="img/mac01.png" alt="">
+            <img src="img/mac01.png" alt="JPort Journalのトップ画面">
             <p class="point-about">グローバル新卒向けキャリアメディア</p>
             <p class="point-about">JPort Journal</p>
             <p class="point-green">1年生から4年生が多く登録</p>
           </div>
           <div class="jport-ambassador">
-            <img src="img/mac02.png" alt="">
+            <img src="img/mac02.png" alt="JPortアンバサダープログラムのトップ画面">
             <p class="point-about">全国にJPortアンバサダーが</p>
             <p class="point-about">「有志」で参画</p>
             <p class="point-green">学生のコミュニティに直接つながっている</p>
           </div>
           <div class="webinars">
-            <img src="img/mac03.png" alt="">
+            <img src="img/mac03.png" alt="共同開催のイベントのランディングページの画面">
             <p class="point-about">コロナ禍でも学生のために</p>
             <p class="point-about">ウェビナーを積極開催</p>
             <p class="point-green">SNSエンゲージメント率が高い</p>
           </div>
         </div>
         <div class="buttons">
-          <button class="apply-btn"><a href="https://share.hsforms.com/1lgwY252vRVuxCtnysIw_lQ4lbvp" target="_blank">まずは利用相談</a></button>
-          <button class="download-btn transparent-btn"><a>資料ダウンロード</a></button>
+          <a class="apply-btn" href="" target="_blank">まずは利用相談</a>
+          <a class="download-btn transparent-btn" href="" target="_blank">資料ダウンロード</a>
         </div>
       </div>
     </section>
@@ -133,8 +134,8 @@
             </div>
           </div>
           <div class="buttons">
-            <button class="apply-btn"><a href="https://share.hsforms.com/1lgwY252vRVuxCtnysIw_lQ4lbvp" target="_blank">まずは利用相談</a></button>
-            <button class="download-btn white-btn"><a>資料ダウンロード</a></button>
+            <a class="apply-btn" href="" target="_blank">まずは利用相談</a>
+            <a class="download-btn white-btn" href="" target="_blank">資料ダウンロード</a>
             <p class="pdf-details">料金体系は、資料ダウンロードをすると見られます。新卒採用の状況により、柔軟に対応することも可能です。</p>
           </div>
         </div>
@@ -160,8 +161,8 @@
             <img src="img/how-to03.png" alt="学生とオンラインでつながる機能">
           </div>
           <div class="buttons">
-            <button class="apply-btn"><a href="https://share.hsforms.com/1lgwY252vRVuxCtnysIw_lQ4lbvp" target="_blank">まずは利用相談</a></button>
-            <button class="download-btn transparent-btn"><a>資料ダウンロード</a></button>
+            <a class="apply-btn" href="" target="_blank">まずは利用相談</a>
+            <a class="download-btn transparent-btn" href="" target="_blank">資料ダウンロード</a>
             <p class="pdf-details">料金体系は、資料ダウンロードをすると見られます。新卒採用の状況により、柔軟に対応することも可能です。</p>
           </div>
         </div>
@@ -173,20 +174,20 @@
         <div class="case-wrapper">
           <div class="case">
             <a>
-              <div class="case-logo logo01"><img src="img/case01.png" alt="" class="case-img"></div>
+              <div class="case-logo logo01"><img src="img/case01.png" alt="笑顔の社員" class="case-img"></div>
               <p class="case-text">コロナ禍学生とのエンゲージメントが難化する中、学生のイメージと会社の実情に乖離がある。伝統的な採用方法でそれを伝えきれない。</p>
               <p class="case-company">株式会社ミキハウス</p>
             </a>
           </div>
           <div class="case">
             <a>
-              <div class="case-logo logo02"><img src="img/case02.png" alt="" class="case-img"></div>
+              <div class="case-logo logo02"><img src="img/case02.png" alt="工場見学" class="case-img"></div>
               <p class="case-text">ジョブフェアや人材紹介で費用対効果がでない。学生の質を保つためにも、1 対 1でオンラインでつながりたい。</p>
               <p class="case-company">日鉄エンジニアリング株式会社</p>
             </a>
           </div>
           <div class="case element-hidden">
-            <div><img src="img/case03.png" alt=""></div>
+            <div><img src="img/case03.png" alt="あなたの事例がここに入ります"></div>
           </div>
         </div>
       </div>
@@ -236,7 +237,7 @@
             </div>
           </div>
         </div>
-        <div><button class="pr-times"><a href="https://prtimes.jp/main/html/rd/p/000000004.000050611.html" target="_blank">PR Times<span></span></a></button></div>
+        <div><a class="pr-times" href="https://prtimes.jp/main/html/rd/p/000000004.000050611.html" target="_blank">PR Times<span></span></a></div>
       </div>
     </section>
     <section class="magazine" id="magazine">
@@ -247,50 +248,50 @@
         <div class="magazine-wrapper">
           <div class="article">
             <a href="https://note.com/hiromikarahashi/n/ncc351a246d00" target="_blank">
-              <img src="img/article01.png" alt="">
+              <img src="img/article01.png" alt="黒スーツを着た女の子">
               <p>日本の大学で学ぶ外国人留学生のリアル</p>
               <p class="date">2020/08/21</p>
             </a>
           </div>
           <div class="article">
             <a href="https://note.com/hiromikarahashi/n/n4b6a824d2b05" target="_blank">
-              <img src="img/article02.png" alt="">
+              <img src="img/article02.png" alt="トライボロー橋">
               <p>JPort by SPeak 唐橋宗三代表の紹介</p>
               <p class="date">2020/08/01</p>
             </a>
           </div>
           <div class="article">
             <a href="https://note.com/hiromikarahashi/n/n4569d0bfae19" target="_blank">
-              <img src="img/article03.png" alt="">
+              <img src="img/article03.png" alt="都内の朝">
               <p>noteはじめます・・・</p>
               <p class="date">2020/07/31</p>
             </a>
           </div>
         </div>
-        <div><button class="download-btn article-btn margin-bottom"><a href="https://note.jporthr.jp/magazines" target="_blank">記事一覧を見る</a></button></div>
+        <div><a class="download-btn article-btn margin-bottom" href="https://note.jporthr.jp/magazines" target="_blank">記事一覧を見る</a></div>
       </div>
     </section>
     <section class="media">
       <div class="content-wrapper">
         <div class="media-wrapper">
-          <div><img src="img/company-start.svg" width="160" height="90" alt=""></div>
-          <div><img src="img/company01.png" width="160" height="90" alt=""></div>
-          <div><img src="img/company02.png" width="160" height="90" alt=""></div>
-          <div><img src="img/company03.png" width="160" height="90" alt=""></div>
-          <div><img src="img/company04.png" width="160" height="90" alt=""></div>
-          <div><img src="img/company05.png" width="160" height="90" alt=""></div>
-          <div><img src="img/company06.png" width="160" height="90" alt=""></div>
-          <div><img src="img/company07.png" width="160" height="90" alt=""></div>
-          <div><img src="img/company08.png" width="160" height="90" alt=""></div>
-          <div><img src="img/company09.png" width="160" height="90" alt=""></div>
-          <div><img src="img/company10.png" width="160" height="90" alt=""></div>
-          <div><img src="img/company11.png" width="160" height="90" alt=""></div>
-          <div><img src="img/company12.png" width="160" height="90" alt=""></div>
-          <div><img src="img/company13.png" width="160" height="90" alt=""></div>
-          <div><img src="img/company14.png" width="160" height="90" alt=""></div>
-          <div><img src="img/company15.png" width="160" height="90" alt=""></div>
-          <div><img src="img/company16.png" width="160" height="90" alt=""></div>
-          <div><img src="img/company17.png" width="160" height="90" alt=""></div>
+          <div><img src="img/company-start.svg" width="160" height="90" alt="JPort Match 掲載企業"></div>
+          <div><img src="img/company01.png" width="160" height="90" alt="MIKI HOUSE ロゴ"></div>
+          <div><img src="img/company02.png" width="160" height="90" alt="日鉄エンジニアリング ロゴ"></div>
+          <div><img src="img/company03.png" width="160" height="90" alt="LINE ロゴ"></div>
+          <div><img src="img/company04.png" width="160" height="90" alt="accenture ロゴ"></div>
+          <div><img src="img/company05.png" width="160" height="90" alt="Calbee ロゴ"></div>
+          <div><img src="img/company06.png" width="160" height="90" alt="GA Technologies ロゴ"></div>
+          <div><img src="img/company07.png" width="160" height="90" alt="FREEWILL ロゴ"></div>
+          <div><img src="img/company08.png" width="160" height="90" alt="KLOOK ロゴ"></div>
+          <div><img src="img/company09.png" width="160" height="90" alt="FINATEXT ロゴ"></div>
+          <div><img src="img/company10.png" width="160" height="90" alt="Uzabase ロゴ"></div>
+          <div><img src="img/company11.png" width="160" height="90" alt="Gaiax ロゴ"></div>
+          <div><img src="img/company12.png" width="160" height="90" alt="SAP ロゴ"></div>
+          <div><img src="img/company13.png" width="160" height="90" alt="Beenos ロゴ"></div>
+          <div><img src="img/company14.png" width="160" height="90" alt="Allied Architects ロゴ"></div>
+          <div><img src="img/company15.png" width="160" height="90" alt="Sun* ロゴ"></div>
+          <div><img src="img/company16.png" width="160" height="90" alt="istyle ロゴ"></div>
+          <div><img src="img/company17.png" width="160" height="90" alt="FREEPLUS ロゴ"></div>
         </div>
       </div>
     </section>
@@ -298,7 +299,7 @@
       <div class="content-wrapper">
         <h3>モニター企業募集開始</h3>
         <p>優秀なグローバル人材が集まっているJPort Matchに、今すぐ登録しましょう<br>折り返し担当者より利用の流れについて説明させていただきます</p>
-        <div><button class="consult"><a href="https://share.hsforms.com/1lgwY252vRVuxCtnysIw_lQ4lbvp" target="_blank">無料で利用相談</a></button></div>
+        <div><a class="consult" href="" target="_blank">無料で利用相談</a></div>
       </div>
     </section>
   </main>
@@ -331,12 +332,12 @@
           </dl>
         </div>
         <div class="footer-right">
-          <div><button class="footer-btn footer-apply"><a href="https://share.hsforms.com/1lgwY252vRVuxCtnysIw_lQ4lbvp" target="_blank">無料で利用相談</a></button></div>
-          <div><button class="footer-btn footer-download"><a>資料ダウンロード</a></button></div>
+          <div><a class="footer-btn footer-apply" href="" target="_blank">無料で利用相談</a></div>
+          <div><a class="footer-btn footer-download" href="" target="_blank">資料ダウンロード</a></div>
         </div>
       </div>
       <div class="footer-copy">
-        <img src="img/logo.svg" width="134" alt="">
+        <img src="img/logo.svg" width="134" alt="JPort Match ロゴ">
         <span>2020 ©️ SPeak Inc</span>
       </div>
     </div>
