pr times center

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             </div>
           </div>
         </div>
-        <div><a class="pr-times" href="https://prtimes.jp/main/html/rd/p/000000004.000050611.html" target="_blank">PR Times<span></span></a></div>
+        <div class="pr-times-center"><a class="pr-times" href="https://prtimes.jp/main/html/rd/p/000000004.000050611.html" target="_blank">PR Times<span></span></a></div>
       </div>
     </section>
     <section class="magazine" id="magazine">
