--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="ie">
         <nav>
           <ul class="header-nav">
-            <li><a href="#"><img src="img/logo.svg" alt="JPort Match ロゴ"></a></li>
+            <li class="header-logo"><a href="#"><img src="img/logo.svg" alt="JPort Match ロゴ"></a></li>
             <li><a href="#challenges">課題</a></li>
             <li><a href="#about">サービスの特徴</a></li>
             <li><a href="#how">使い方</a></li>
@@ -37,7 +37,8 @@
       <div class="header-wrapper">
         <div class="top-content">
           <h1>グローバル新卒と出会い、<br><span>「らしい」海外展開・ダイバーシティを。</span></h1>
-          <p class="top-text">新卒・中途市場にでてきづらい、全国有名大学のグローバル人材と<br>直接つながる、<span>双方向マッチングサービス</span>です。</p>
+          <p class="top-text">新卒・中途市場にでてきづらい、全国有名大学のグローバル人材と
+直接つながる、<span>双方向マッチングサービス</span>です。</p>
           <div class="header-buttons">
             <a class="apply-btn header-btn" href="" target="_blank">まずは利用相談</a>
             <a class="download-btn header-download-btn" href="" target="_blank">資料ダウンロード</a>
@@ -237,7 +238,7 @@
             </div>
           </div>
         </div>
-        <div class="pr-times-center"><a class="pr-times" href="https://prtimes.jp/main/html/rd/p/000000004.000050611.html" target="_blank">PR Times<span></span></a></div>
+        <div><a class="pr-times" href="https://prtimes.jp/main/html/rd/p/000000004.000050611.html" target="_blank">PR Times<span></span></a></div>
       </div>
     </section>
     <section class="magazine" id="magazine">
@@ -275,23 +276,23 @@
       <div class="content-wrapper">
         <div class="media-wrapper">
           <div><img src="img/company-start.svg" width="160" height="90" alt="JPort Match 掲載企業"></div>
-          <div><img src="img/company01.png" width="160" height="90" alt="MIKI HOUSE ロゴ"></div>
-          <div><img src="img/company02.png" width="160" height="90" alt="日鉄エンジニアリング ロゴ"></div>
-          <div><img src="img/company03.png" width="160" height="90" alt="LINE ロゴ"></div>
-          <div><img src="img/company04.png" width="160" height="90" alt="accenture ロゴ"></div>
-          <div><img src="img/company05.png" width="160" height="90" alt="Calbee ロゴ"></div>
-          <div><img src="img/company06.png" width="160" height="90" alt="GA Technologies ロゴ"></div>
-          <div><img src="img/company07.png" width="160" height="90" alt="FREEWILL ロゴ"></div>
-          <div><img src="img/company08.png" width="160" height="90" alt="KLOOK ロゴ"></div>
-          <div><img src="img/company09.png" width="160" height="90" alt="FINATEXT ロゴ"></div>
-          <div><img src="img/company10.png" width="160" height="90" alt="Uzabase ロゴ"></div>
-          <div><img src="img/company11.png" width="160" height="90" alt="Gaiax ロゴ"></div>
-          <div><img src="img/company12.png" width="160" height="90" alt="SAP ロゴ"></div>
-          <div><img src="img/company13.png" width="160" height="90" alt="Beenos ロゴ"></div>
-          <div><img src="img/company14.png" width="160" height="90" alt="Allied Architects ロゴ"></div>
-          <div><img src="img/company15.png" width="160" height="90" alt="Sun* ロゴ"></div>
-          <div><img src="img/company16.png" width="160" height="90" alt="istyle ロゴ"></div>
-          <div><img src="img/company17.png" width="160" height="90" alt="FREEPLUS ロゴ"></div>
+          <div><img src="img/company01.png" alt="MIKI HOUSE ロゴ"></div>
+          <div><img src="img/company02.png" alt="日鉄エンジニアリング ロゴ"></div>
+          <div><img src="img/company03.png" alt="LINE ロゴ"></div>
+          <div><img src="img/company04.png" alt="accenture ロゴ"></div>
+          <div><img src="img/company05.png" alt="Calbee ロゴ"></div>
+          <div><img src="img/company06.png" alt="GA Technologies ロゴ"></div>
+          <div><img src="img/company07.png" alt="FREEWILL ロゴ"></div>
+          <div><img src="img/company08.png" alt="KLOOK ロゴ"></div>
+          <div><img src="img/company09.png" alt="FINATEXT ロゴ"></div>
+          <div><img src="img/company10.png" alt="Uzabase ロゴ"></div>
+          <div><img src="img/company11.png" alt="Gaiax ロゴ"></div>
+          <div><img src="img/company12.png" alt="SAP ロゴ"></div>
+          <div><img src="img/company13.png" alt="Beenos ロゴ"></div>
+          <div><img src="img/company14.png" alt="Allied Architects ロゴ"></div>
+          <div><img src="img/company15.png" alt="Sun* ロゴ"></div>
+          <div><img src="img/company16.png" alt="istyle ロゴ"></div>
+          <div><img src="img/company17.png" alt="FREEPLUS ロゴ"></div>
         </div>
       </div>
     </section>
