--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </section>
     <section class="promo">
       <div class="content-wrapper">
-        <h2><span>自社のニーズにマッチする</span><span>グローバル新卒が、</span><span>定期的にレコメンドされる</span></h2>
+        <h2><span class="span1">自社のニーズにマッチする</span><span class="span2">グローバル新卒が、</span><span>定期的にレコメンドされる</span></h2>
         <p class="caption">手間なく、いつでも・どこでも、出会い〜採用まで関係性を構築できます</p>
         <div class="flow-wrapper">
           <h3>学生とダイレクトに繋がれる</h3>
@@ -174,7 +174,7 @@
         <h2 class="center"><span>Case study</span>お客様導入事例</h2>
         <div class="case-wrapper">
           <div class="case">
-            <a>
+            <a href="https://note.jporthr.jp/n/na4528f25ff11?magazine_key=m15b7dc6aa9f4" target="_blank">
               <div class="case-logo logo01"><img src="img/case01.png" alt="笑顔の社員" class="case-img"></div>
               <p class="case-text">コロナ禍学生とのエンゲージメントが難化する中、学生のイメージと会社の実情に乖離がある。伝統的な採用方法でそれを伝えきれない。</p>
               <p class="case-company">株式会社ミキハウス</p>
@@ -248,24 +248,27 @@
         <p class="magazine-about">「ボーダーレスな社会や採用を考えるきっかけ」を発信します。</p>
         <div class="magazine-wrapper">
           <div class="article">
-            <a href="https://note.com/hiromikarahashi/n/ncc351a246d00" target="_blank">
+            <a href="https://note.jporthr.jp/m/mbe40ebe98733" target="_blank">
               <img src="img/article01.png" alt="黒スーツを着た女の子">
-              <p>日本の大学で学ぶ外国人留学生のリアル</p>
-              <p class="date">2020/08/21</p>
+              <p>JPortを作る株式会社SPeakのヒトたち</p>
             </a>
           </div>
           <div class="article">
-            <a href="https://note.com/hiromikarahashi/n/n4b6a824d2b05" target="_blank">
+            <a href="https://note.jporthr.jp/m/m1e9825e35be6" target="_blank">
               <img src="img/article02.png" alt="トライボロー橋">
-              <p>JPort by SPeak 唐橋宗三代表の紹介</p>
-              <p class="date">2020/08/01</p>
+              <p>Who is グローバル新卒？</p>
             </a>
           </div>
-          <div class="article">
-            <a href="https://note.com/hiromikarahashi/n/n4569d0bfae19" target="_blank">
+          <div class="article coming-soon">
+            <a href="#" class="disabled" target="_blank">
               <img src="img/article03.png" alt="都内の朝">
-              <p>noteはじめます・・・</p>
-              <p class="date">2020/07/31</p>
+              <p>JPort Global Lab</p>
+            </a>
+          </div>
+          <div class="article coming-soon">
+            <a href="#" class="disabled" target="_blank">
+              <img src="img/article04.png" alt="黒スーツを着た女の子">
+              <p>キーパーソン特集: Game Changers of Japan</p>
             </a>
           </div>
         </div>
